{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 11,
  "lineage": "13adcbfa-5227-86c8-d0f7-eaa34638ad8e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074c4f6d09506c580",
            "arn": "arn:aws:ec2:us-east-1:645537741587:elastic-ip/eipalloc-074c4f6d09506c580",
            "domain": "vpc",
            "id": "eipalloc-074c4f6d09506c580",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-170-161-73.compute-1.amazonaws.com",
            "public_ip": "35.170.161.73",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "JoeSKTask-NAT-EIP"
            },
            "tags_all": {
              "Name": "JoeSKTask-NAT-EIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645537741587:internet-gateway/igw-0bd9998d2d245d436",
            "id": "igw-0bd9998d2d245d436",
            "owner_id": "645537741587",
            "region": "us-east-1",
            "tags": {
              "Name": "JoeSKTask-IGW"
            },
            "tags_all": {
              "Name": "JoeSKTask-IGW"
            },
            "vpc_id": "vpc-0ebb6663fb790740a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.TaskWork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074c4f6d09506c580",
            "association_id": "eipassoc-0118c02b2ea704762",
            "connectivity_type": "public",
            "id": "nat-03877dac0f8b3d358",
            "network_interface_id": "eni-088fb71ee45d6e5ec",
            "private_ip": "10.1.1.181",
            "public_ip": "35.170.161.73",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d7d7fd809f21d49c",
            "tags": {
              "Name": "JoeSKTask-NAT-Gateway"
            },
            "tags_all": {
              "Name": "JoeSKTask-NAT-Gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.TaskWork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645537741587:route-table/rtb-08c65eb9ebe248f91",
            "id": "rtb-08c65eb9ebe248f91",
            "owner_id": "645537741587",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03877dac0f8b3d358",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JoeSKTask-Private-RT"
            },
            "tags_all": {
              "Name": "JoeSKTask-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebb6663fb790740a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "645537741587",
            "id": "rtb-08c65eb9ebe248f91",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.TaskWork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645537741587:route-table/rtb-0bab5296f0bcfd404",
            "id": "rtb-0bab5296f0bcfd404",
            "owner_id": "645537741587",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd9998d2d245d436",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JoeSKTask-Public-RT"
            },
            "tags_all": {
              "Name": "JoeSKTask-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebb6663fb790740a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "645537741587",
            "id": "rtb-0bab5296f0bcfd404",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.TaskWork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9fed1a42e41bf66",
            "region": "us-east-1",
            "route_table_id": "rtb-08c65eb9ebe248f91",
            "subnet_id": "subnet-0dd87ba33e1c65cfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.TaskWork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b1538483486cc83",
            "region": "us-east-1",
            "route_table_id": "rtb-0bab5296f0bcfd404",
            "subnet_id": "subnet-0d7d7fd809f21d49c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.TaskWork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645537741587:subnet/subnet-0dd87ba33e1c65cfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd87ba33e1c65cfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "645537741587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "JoeSKTask-Private-Subnet"
            },
            "tags_all": {
              "Name": "JoeSKTask-Private-Subnet"
            },
            "vpc_id": "vpc-0ebb6663fb790740a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "645537741587",
            "id": "subnet-0dd87ba33e1c65cfd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.TaskWork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645537741587:subnet/subnet-0d7d7fd809f21d49c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7d7fd809f21d49c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "645537741587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "JoeSKTask-Public-Subnet"
            },
            "tags_all": {
              "Name": "JoeSKTask-Public-Subnet"
            },
            "vpc_id": "vpc-0ebb6663fb790740a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "645537741587",
            "id": "subnet-0d7d7fd809f21d49c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.TaskWork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TaskWork",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645537741587:vpc/vpc-0ebb6663fb790740a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0fbbae5ef89cc1714",
            "default_route_table_id": "rtb-003b7a92f9350e6f8",
            "default_security_group_id": "sg-0da94dd90cc7bc735",
            "dhcp_options_id": "dopt-0be1b8d9612c1e667",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ebb6663fb790740a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003b7a92f9350e6f8",
            "owner_id": "645537741587",
            "region": "us-east-1",
            "tags": {
              "Name": "JoeSKTask-VPC"
            },
            "tags_all": {
              "Name": "JoeSKTask-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}